# mcp-rag-docs

./: .env.example  .gitignore  CODE_INDEX_GUIDE.md  ENHANCED_QUERY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MCP_SETUP.md  MULTI_MODE_RETRIEVAL_GUIDE.md  OPENAI_API_GUIDE.md  QUERY_ROUTING_GUIDE.md  QUICK_START.md  RATE_LIMITING.md  README.md  TEST_COVERAGE.md  build_code_index.py  check_github_urls.py  check_status.py  claude_code_mcp_config.json  docker-compose.yml  example_document.md  example_usage.py  ingest_docs.py  main.py  pyproject.toml  test_class_modes.py  test_code_index.py  test_doc_search.py  test_enhanced_query.py  test_manual_source_code.py  test_mcp.py  test_mcp_enhanced.py  test_mcp_integration.py  test_mcp_query.py  test_mcp_tool_descriptions.py  test_multi_mode_retrieval.py  test_openai_api.py  test_query.py  test_rate_limiting.py  test_rate_limiting_mock.py  test_setup.py  test_source_code.py  (+1 more)
config/: settings.py
mcp_server/: __init__.py  server.py
rag_server/: __init__.py  models.py  openai_api.py  openai_models.py  rag_system.py  server.py  smart_query.py
utils/: __init__.py  code_index_store.py  code_indexer.py  document_processor.py  embeddings.py  frontmatter_parser.py  github_parser.py  google_api_client.py  hierarchical_chunker.py  markdown_parser.py  query_classifier.py  rate_limit_store.py  reference_extractor.py  retrieval_router.py  source_extractor.py  text_chunker.py  vector_store.py
